[tool.poetry]
name = "chatcli"
version = "0.1.3"
description = "Streaming CLI interface for OpenAI's Chat API"
authors = ["IsaacBreen <mail@isaacbreen.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.0"
prompt-toolkit = "^3.0.38"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatcli = "chatcli:chatcli"